Cambios en el proyecto. Se han añadido los resultados de CUDA

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,10 @@
 MPI=mpic++
 GCC=g++
+CUDA=nvcc
+CFLAGS= -arch=compute_35
 FLAGS=-std=c++11
 
-all: merge_parallel merge_sequential quicksort
+all: merge_parallel merge_sequential merge_cuda quicksort
 
 merge_sequential: mergesort_sequential.cpp
 	$(GCC) $(FLAGS) -o $@ $^
@@ -13,7 +15,11 @@ merge_parallel: mergesort_parallel.cpp
 quicksort: quicksort.cpp
 	$(GCC) $(FLAGS) -o $@ $^
 
+merge_cuda: merge_cuda.cu
+	$(CUDA) -O3 -DTIMING -o $@ $^
+
 clean:
 	rm merge_sequential
 	rm merge_parallel
 	rm quicksort
+	rm merge_cuda
